sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:7: error: missing argument list for method setValeur in class SortingEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `setValeur _` or `setValeur(_,_)` instead of `setValeur`.
      setValeur(i)=getValeur(i+1)
      ^AlgBubbleSort1:8: error: missing argument list for method setValeur in class SortingEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `setValeur _` or `setValeur(_,_)` instead of `setValeur`.
      setValeur(i)=stock
      ^