sort.basic.bubble.AlgBubbleSort1.scala.code
var stock = 0
def bubbleSort()  {
  for (i<- 1 to 26) {
    if (getValeur(i)>getValeur(i+1)) {
      stock = getValeur(i)
      setValeur(i)=getValeur(i+1)
      setValeur(i)=stock
    }
  }
}